[metadata]
name = knk-pool-executor
version = 0.0.1
author = Tanapat Kahabodeekanokkul
author_email = pahntanapat@gmail.com
description = Extension of concurrent.futures for AWS Lambda-compatible ProcessPoolExecutor
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pahntanapat/knk-pool-executor
project_urls = https://github.com/pahntanapat/knk-pool-executor
bugtrack_url = https://github.com/pahntanapat/knk-pool-executor/issues
classifiers =
Programming Language :: Python :: 3
License :: OSI Approved :: MIT License
Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
